Final changes done

--- a/Jarvis/static/css/style.css
+++ b/Jarvis/static/css/style.css
@@ -46,7 +46,7 @@ main {
     margin-bottom: 20px;
 }
 
-#activate-button {
+#recordButton {
     background-color: #7f78df;
     color: #fff;
     padding: 20px 30px;
