--- a/Jarvis/templates/index.html
+++ b/Jarvis/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="icon" type="image/x-icon" href="../static/logo.png">
 </head>
-<script src="../static/script.js"></script>
+
 <body>
     <header>
         <div class="container">
@@ -22,8 +22,12 @@
                 <p>
                     Simplify your tasks and boost your productivity with Jarvis, your intelligent desktop assistant.
                 </p>
-                <button id="activate-button">Talk to Jarvis</button>
+                <button id="recordButton">Talk to Jarvis</button>
             </div>
+            <p id="output">
+
+            </p>
+
         </section>
         <section class="features">
             <div class="container">
@@ -47,6 +51,6 @@
             <p>&copy; Jarvis Voice Assistant</p>
         </div>
     </footer>
-    
+    <script src="../static/script.js"></script>
 </body>
 </html>
